@startuml Social App Models

' Định nghĩa style
skinparam class {
    BackgroundColor #ECECEC
    ArrowColor #2688d4
    BorderColor #2688d4
}

' UserModel
class UserModel {
    - uid: String
    - token: String?
    - email: String
    - fullName: String
    - gender: String?
    - birthDay: DateTime?
    - phoneNumber: String?
    - address: String?
    - profileImage: String?
    - decs: String?
    - lastSeen: DateTime?
    - createdAt: DateTime?
    - isOnline: boolean
    - isPrivateAccount: boolean
    - followersCount: int
}

' PostModel
class PostModel {
    - postId: String
    - userId: String
    - content: String
    - fileUrls: List<String>?
    - thumbnailUrl: String?
    - postType: String
    - createdAt: DateTime
    - updatedAt: DateTime?
    - likeCount: int
    - commentCount: int
}

' CommentModel
class CommentModel {
    - commentId: String
    - postId: String
    - userId: String
    - content: String
    - likeCount: int
    - createdAt: DateTime
    - parentId: String?
}

' LikeModel
class LikeModel {
    - likeId: String
    - contentId: String
    - contentType: String
    - userId: String
    - createdAt: DateTime
}

' FriendshipModel
class FriendshipModel {
    - friendshipId: String
    - senderId: String
    - receiverId: String
    - isAccepted: boolean
    - createdAt: DateTime
}

' Message
class Message {
    - id: String
    - chatId: String
    - senderId: String
    - senderName: String?
    - senderAvatar: String?
    - content: String
    - type: String
    - mediaUrl: String?
    - seenBy: Set<String>
    - createdAt: DateTime
}

' Chatroom
class Chatroom {
    - id: String
    - name: String?
    - avatar: String?
    - isGroup: boolean
    - isPublic: boolean
    - members: List<String>
    - admins: List<String>
    - lastMessageId: String?
    - lastMessage: String?
    - lastMessageType: String?
    - lastMessageSenderId: String?
    - updatedAt: DateTime
    - createdBy: String
    - createdAt: DateTime
}

' NotificationModel
class NotificationModel {
    - id: String
    - senderId: String
    - receiverId: String
    - content: String
    - type: String
    - postId: String?
    - commentId: String?
    - chatId: String?
    - isRead: boolean
    - createdAt: DateTime
    - senderName: String?
    - senderAvatar: String?
}

' Mối quan hệ
UserModel "1" -- "n" PostModel : creates >
UserModel "1" -- "n" CommentModel : writes >
UserModel "1" -- "n" LikeModel : gives >
PostModel "1" -- "n" CommentModel : has >
PostModel "1" -- "n" LikeModel : receives >
CommentModel "1" -- "n" LikeModel : receives >
CommentModel "0..1" -- "n" CommentModel : parent-child >
UserModel "1" -- "n" FriendshipModel : sends >
UserModel "1" -- "n" FriendshipModel : receives >
UserModel "1" -- "n" Message : sends >
Chatroom "1" -- "n" Message : contains >
UserModel "1" -- "n" NotificationModel : sends >
UserModel "1" -- "n" NotificationModel : receives >

@enduml 